--- a/test_famous-compnents/packages/.gitignore
+++ b/test_famous-compnents/packages/.gitignore
@@ -1,9 +1,11 @@
+/famono
+/famous-components
+/pince
+/translation-admin
 /translation
+/bootstrap3-less
 /iron-router
 /iron-layout
 /blaze-layout
 /iron-core
 /iron-dynamic-template
-/bootstrap3-less
-/translation-admin
-/famono
